<resources>
    <string name="app_name">Tom &amp; Jerry</string>
    <string name="start_game_button">START GAME</string>
    <string name="game_name"><![CDATA[Tom & Jerry\'s Game]]></string>
    <string name="content_description_jerry">jerry</string>
    <string name="left_button_content_description">Move left</string>
    <string name="right_button_content_description">Move right</string>
    <string name="test">test</string>
    <string name="heart_icon">heart</string>
    <string name="game_over_message">GAME OVER</string>
    <string name="right_button">Right Button</string>
    <string name="left_button">Left Button</string>
    <string name="life_heart_1">Life heart 1</string>
    <string name="life_heart_2">Life heart 2</string>
    <string name="life_heart_3">Life heart 3</string>
    <string name="move_right">Move right</string>
    <string name="move_left">Move left</string>
    <string name="jerry_character">Jerry character</string>
    <string name="game_over">Game Over!</string>
    <string name="toast_message_when_hit">Get Good Bruh :P</string>
    <string name="odometer_text_view">Distance: 0m</string>
    <string name="score_format">Score: %1$d</string>
    <string name="odometer_format">Distance: %1$dm</string>
    <string name="initial_score">Score: 0</string>
    <string name="select_game_mode_text_view">Select Game Mode</string>
    <string name="buttons_fast_speed_text_view">Buttons - Fast Speed</string>
    <string name="sensor_controls_text_view">Sensor Controls</string>
    <string name="buttons_slow_speed_text_view">Buttons - Slow Speed</string>
    <string name="high_scores_button">High Scores</string>
</resources>